--- a/config/database.yml
+++ b/config/database.yml
@@ -23,8 +23,8 @@ default: &default
 
 development:
   <<: *default
-  # database: webuy_backend_development
-  database: postgres
+  database: josephlouie
+  # database: postgres
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -58,8 +58,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  # database: webuy_backend_test
-  database: postgres
+  database: josephlouie
+  # database: postgres
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -82,7 +82,7 @@ test:
 #
 production:
   <<: *default
-  # database: webuy_backend_production
-  database: postgres
+  database: josephlouie
+  # database: postgres
   username: webuy_backend
   password: <%= ENV['WEBUY_BACKEND_DATABASE_PASSWORD'] %>
